@startuml
hide circle
hide empty members
skinparam shadowing false
skinparam defaultFontName Helvetica
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 55
skinparam class {
  BackgroundColor #D9D9D9
  BorderColor #707070
  FontColor #000000
  FontStyle bold
  FontSize 15
}
skinparam classBorderThickness 1

class Cliente
class ClienteRegistrado
class ClienteInvitado
class Usuario
class Pedido
class LineaPedido
class ExtraLinea
class Producto
class Extra
class BloqueProduccion

ClienteRegistrado --|> Cliente
ClienteInvitado  --|> Cliente

Cliente     -- Pedido : realiza
Usuario     -- Pedido : gestiona
Pedido      -- LineaPedido : contiene
Pedido      -- BloqueProduccion : ocupa
LineaPedido -- Producto : refiere
LineaPedido -- ExtraLinea : incluye
ExtraLinea  -- Extra : refiere
@enduml
